SummerDuck/gen/summerDuckParser.java
// Generated from /Users/ivandiaz/Desktop/SummerDuckCompi/SummerDuck/summerDuck.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class summerDuckParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROG=1, MAIN=2, INT=3, FLOAT=4, CHAR=5, BOOL=6, RETURN=7, FUNCTION=8, 
		IF=9, ELSE=10, WHILE=11, THEN=12, DO=13, UNTIL=14, SCAN=15, PRINT=16, 
		SUMA=17, RESTA=18, MULT=19, DIV=20, LP=21, RP=22, LB=23, RB=24, LK=25, 
		RK=26, DP=27, PC=28, COMA=29, PUNTO=30, MOD=31, IGUAL=32, MAYOR=33, MENOR=34, 
		MAYORI=35, MENORI=36, EQUIV=37, NEG=38, DIF=39, AND=40, OR=41, CTE_BT=42, 
		CTE_BF=43, CTE_I=44, CTE_F=45, CTE_C=46, ID=47, WS=48;
	public static final int
		RULE_summerduck = 0, RULE_main = 1, RULE_vardec = 2, RULE_vardecaux = 3, 
		RULE_type = 4, RULE_var = 5, RULE_varaux = 6, RULE_var2 = 7, RULE_varaux2 = 8, 
		RULE_fundef = 9, RULE_params = 10, RULE_paramsaux = 11, RULE_paramsaux2 = 12, 
		RULE_statements = 13, RULE_asignations = 14, RULE_varAsign = 15, RULE_leer = 16, 
		RULE_leeraux = 17, RULE_leeraux2 = 18, RULE_escribir = 19, RULE_ifelse = 20, 
		RULE_ifelseaux = 21, RULE_while_statement = 22, RULE_dowhile = 23, RULE_exp = 24, 
		RULE_expaux = 25, RULE_exor = 26, RULE_exoraux = 27, RULE_exnot = 28, 
		RULE_exnotaux = 29, RULE_exlog = 30, RULE_exlogaux = 31, RULE_exmod = 32, 
		RULE_exmodaux = 33, RULE_ex = 34, RULE_exaux = 35, RULE_termino = 36, 
		RULE_terminoaux = 37, RULE_factor = 38, RULE_functioncall = 39, RULE_functioncallaux = 40;
	public static final String[] ruleNames = {
		"summerduck", "main", "vardec", "vardecaux", "type", "var", "varaux", 
		"var2", "varaux2", "fundef", "params", "paramsaux", "paramsaux2", "statements", 
		"asignations", "varAsign", "leer", "leeraux", "leeraux2", "escribir", 
		"ifelse", "ifelseaux", "while_statement", "dowhile", "exp", "expaux", 
		"exor", "exoraux", "exnot", "exnotaux", "exlog", "exlogaux", "exmod", 
		"exmodaux", "ex", "exaux", "termino", "terminoaux", "factor", "functioncall", 
		"functioncallaux"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'programa'", "'principal'", "'entero'", "'real'", "'char'", "'boleano'", 
		"'regresa'", "'modulo'", "'si'", "'sino'", "'mientras'", "'haz'", "'repite'", 
		"'hasta'", "'lee'", "'escribe'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "':'", "';'", "','", "'.'", "'%'", "'='", 
		"'>'", "'<'", "'>='", "'<='", "'=='", "'¡'", "'!='", "'&'", "'|'", "'verdadero'", 
		"'falso'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROG", "MAIN", "INT", "FLOAT", "CHAR", "BOOL", "RETURN", "FUNCTION", 
		"IF", "ELSE", "WHILE", "THEN", "DO", "UNTIL", "SCAN", "PRINT", "SUMA", 
		"RESTA", "MULT", "DIV", "LP", "RP", "LB", "RB", "LK", "RK", "DP", "PC", 
		"COMA", "PUNTO", "MOD", "IGUAL", "MAYOR", "MENOR", "MAYORI", "MENORI", 
		"EQUIV", "NEG", "DIF", "AND", "OR", "CTE_BT", "CTE_BF", "CTE_I", "CTE_F", 
		"CTE_C", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "summerDuck.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public summerDuckParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SummerduckContext extends ParserRuleContext {
		public TerminalNode PROG() { return getToken(summerDuckParser.PROG, 0); }
		public TerminalNode ID() { return getToken(summerDuckParser.ID, 0); }
		public TerminalNode PC() { return getToken(summerDuckParser.PC, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public AsignationsContext asignations() {
			return getRuleContext(AsignationsContext.class,0);
		}
		public FundefContext fundef() {
			return getRuleContext(FundefContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public SummerduckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summerduck; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterSummerduck(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitSummerduck(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitSummerduck(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SummerduckContext summerduck() throws RecognitionException {
		SummerduckContext _localctx = new SummerduckContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_summerduck);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(PROG);
			setState(83);
			match(ID);
			setState(84);
			match(PC);
			setState(85);
			vardec();
			setState(86);
			asignations();Reglas.Programa.R1();
			setState(87);
			fundef();
			setState(88);
			Reglas.Programa.R2(); main(); Reglas.Programa.R3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(summerDuckParser.MAIN, 0); }
		public TerminalNode LP() { return getToken(summerDuckParser.LP, 0); }
		public TerminalNode RP() { return getToken(summerDuckParser.RP, 0); }
		public TerminalNode LK() { return getToken(summerDuckParser.LK, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RK() { return getToken(summerDuckParser.RK, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(MAIN);
			setState(91);
			match(LP);
			setState(92);
			match(RP);
			setState(93);
			match(LK);Reglas.FuncDecl.R1();
			setState(94);
			vardec();
			setState(95);
			statements();
			setState(96);
			match(RK);Reglas.FuncDecl.R2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode DP() { return getToken(summerDuckParser.DP, 0); }
		public Var2Context var2() {
			return getRuleContext(Var2Context.class,0);
		}
		public VardecauxContext vardecaux() {
			return getRuleContext(VardecauxContext.class,0);
		}
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVardec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVardec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardec);
		try {
			setState(104);
			switch (_input.LA(1)) {
			case MAIN:
			case RETURN:
			case FUNCTION:
			case IF:
			case WHILE:
			case DO:
			case SCAN:
			case PRINT:
			case RK:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case INT:
			case FLOAT:
			case CHAR:
			case BOOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				type();Reglas.VarDec.R1();
				setState(100);
				match(DP);
				setState(101);
				var2();
				setState(102);
				vardecaux();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecauxContext extends ParserRuleContext {
		public TerminalNode PC() { return getToken(summerDuckParser.PC, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public TerminalNode COMA() { return getToken(summerDuckParser.COMA, 0); }
		public Var2Context var2() {
			return getRuleContext(Var2Context.class,0);
		}
		public VardecauxContext vardecaux() {
			return getRuleContext(VardecauxContext.class,0);
		}
		public VardecauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVardecaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVardecaux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVardecaux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardecauxContext vardecaux() throws RecognitionException {
		VardecauxContext _localctx = new VardecauxContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecaux);
		try {
			setState(112);
			switch (_input.LA(1)) {
			case PC:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(PC);
				setState(107);
				vardec();
				}
				break;
			case COMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(COMA);
				setState(109);
				var2();
				setState(110);
				vardecaux();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(summerDuckParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(summerDuckParser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(summerDuckParser.CHAR, 0); }
		public TerminalNode BOOL() { return getToken(summerDuckParser.BOOL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
                Reglas.Type.R1(this.getCurrentToken().getText());
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(summerDuckParser.ID, 0); }
		public VarauxContext varaux() {
			return getRuleContext(VarauxContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			Reglas.Var1.EntrandoAID(this.getCurrentToken().getText());
            match(ID);
			setState(117);
			varaux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarauxContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(summerDuckParser.LB, 0); }
		public TerminalNode CTE_I() { return getToken(summerDuckParser.CTE_I, 0); }
		public TerminalNode RB() { return getToken(summerDuckParser.RB, 0); }
		public VarauxContext varaux() {
			return getRuleContext(VarauxContext.class,0);
		}
		public VarauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVaraux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVaraux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVaraux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarauxContext varaux() throws RecognitionException {
		VarauxContext _localctx = new VarauxContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varaux);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case RP:
			case COMA:
			case IGUAL:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(LB);
				setState(121);
				match(CTE_I);
				setState(122);
				match(RB);
				setState(123);
				varaux();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var2Context extends ParserRuleContext {
		public TerminalNode ID() { return getToken(summerDuckParser.ID, 0); }
		public Varaux2Context varaux2() {
			return getRuleContext(Varaux2Context.class,0);
		}
		public Var2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVar2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVar2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVar2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var2Context var2() throws RecognitionException {
		Var2Context _localctx = new Var2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_var2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
            Reglas.VarDec.R2(this.getCurrentToken().getText());match(ID);
			setState(127);
			varaux2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Varaux2Context extends ParserRuleContext {
		public TerminalNode LB() { return getToken(summerDuckParser.LB, 0); }
		public TerminalNode CTE_I() { return getToken(summerDuckParser.CTE_I, 0); }
		public TerminalNode RB() { return getToken(summerDuckParser.RB, 0); }
		public Varaux2Context varaux2() {
			return getRuleContext(Varaux2Context.class,0);
		}
		public Varaux2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varaux2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterVaraux2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitVaraux2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitVaraux2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Varaux2Context varaux2() throws RecognitionException {
		Varaux2Context _localctx = new Varaux2Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_varaux2);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case PC:
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(LB);
				setState(131);
				match(CTE_I);
				setState(132);
				match(RB);
				setState(133);
				varaux2();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FundefContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(summerDuckParser.FUNCTION, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(summerDuckParser.ID, 0); }
		public List<TerminalNode> LP() { return getTokens(summerDuckParser.LP); }
		public TerminalNode LP(int i) {
			return getToken(summerDuckParser.LP, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> RP() { return getTokens(summerDuckParser.RP); }
		public TerminalNode RP(int i) {
			return getToken(summerDuckParser.RP, i);
		}
		public List<TerminalNode> PC() { return getTokens(summerDuckParser.PC); }
		public TerminalNode PC(int i) {
			return getToken(summerDuckParser.PC, i);
		}
		public TerminalNode LK() { return getToken(summerDuckParser.LK, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(summerDuckParser.RETURN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode RK() { return getToken(summerDuckParser.RK, 0); }
		public FundefContext fundef() {
			return getRuleContext(FundefContext.class,0);
		}
		public FundefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterFundef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitFundef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitFundef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FundefContext fundef() throws RecognitionException {
		FundefContext _localctx = new FundefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fundef);
		try {
			setState(155);
			switch (_input.LA(1)) {
			case MAIN:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(FUNCTION);
				setState(138);
				type();
				setState(139);
				match(ID);
				setState(140);
				match(LP);
				setState(141);
				params();
				setState(142);
				match(RP);
				setState(143);
				match(PC);
				setState(144);
				match(LK);
				setState(145);
				vardec();
				setState(146);
				statements();
				setState(147);
				match(RETURN);
				setState(148);
				match(LP);
				setState(149);
				exp();
				setState(150);
				match(RP);
				setState(151);
				match(PC);
				setState(152);
				match(RK);
				setState(153);
				fundef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public ParamsauxContext paramsaux() {
			return getRuleContext(ParamsauxContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_params);
		try {
			setState(159);
			switch (_input.LA(1)) {
			case RP:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case INT:
			case FLOAT:
			case CHAR:
			case BOOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				paramsaux();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsauxContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode DP() { return getToken(summerDuckParser.DP, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public Paramsaux2Context paramsaux2() {
			return getRuleContext(Paramsaux2Context.class,0);
		}
		public ParamsauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).enterParamsaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof summerDuckListener ) ((summerDuckListener)listener).exitParamsaux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof summerDuckVisitor ) return ((summerDuckVisitor<? extends T>)visitor).visitParamsaux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsauxContext paramsaux() throws RecognitionException {
		ParamsauxContext _localctx = new ParamsauxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_paramsaux);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			type();
			setState(162);
			match(DP);
			setState(163);
			var();
			setState(164);
			paramsaux2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
